<resources>
    <string name="app_name">Memory Game</string>
    <string name="shared_pref_theme_key">theme_key</string>
    <string name="shared_pref_save_page_of_theme_select">theme selct brooooo</string>
    <string name="isMuted_key">mutedKEy</string>
    <string name="medal_storage_master_key">com.example.zach.memorygame</string>
    <string name="shared_pref_S1L1_key">s1l1_key</string>
    <string name="shared_pref_S1L2_key">s1l2_key</string>
    <string name="shared_pref_S1L3_key">s1l3_key</string>
    <string name="shared_pref_S1L4_key">s1l4_key</string>
    <string name="shared_pref_S2L1_key">s2l1_key</string>
    <string name="shared_pref_S2L2_key">s2l2_key</string>
    <string name="shared_pref_S2L3_key">s2l3_key</string>
    <string name="shared_pref_S2L4_key">s2l4_key</string>
    <string name="shared_pref_S3L1_key">s3l1_key</string>
    <string name="shared_pref_S3L2_key">s3l2_key</string>
    <string name="shared_pref_S3L3_key">s3l3_key</string>
    <string name="shared_pref_S3L4_key">s3l4_key</string>
    <string name="shared_pref_S4L1_key">s4l1_key</string>
    <string name="shared_pref_S4L2_key">s4l2_key</string>
    <string name="shared_pref_S4L3_key">s4l3_key</string>
    <string name="shared_pref_S4L4_key">s4l4_key</string>
    <string name="shared_pref_S5L1_key">s5l1_key</string>
    <string name="shared_pref_S5L2_key">s5l2_key</string>
    <string name="shared_pref_S5L3_key">s5l3_key</string>
    <string name="shared_pref_S5L4_key">s5l4_key</string>
    <string name="shared_pref_S6L1_key">s6l1_key</string>
    <string name="shared_pref_S6L2_key">s6l2_key</string>
    <string name="shared_pref_S6L3_key">s6l3_key</string>
    <string name="shared_pref_S6L4_key">s6l4_key</string>
    <string name="shared_pref_S7L1_key">s7l1_key</string>
    <string name="shared_pref_S7L2_key">s7l2_key</string>
    <string name="shared_pref_S7L3_key">s7l3_key</string>
    <string name="shared_pref_S7L4_key">s7l4_key</string>
    <string name="store_current_stage_pager">stageOfPager</string>
    <string name="shared_pref_stage1_lock_status_key">Stage 1?</string>
    <string name="shared_pref_stage2_lock_status_key">Stage 2?</string>
    <string name="shared_pref_stage3_lock_status_key">Stage 3?</string>
    <string name="shared_pref_stage4_lock_status_key">Stage 4?</string>
    <string name="shared_pref_stage5_lock_status_key">Stage 5?</string>
    <string name="shared_pref_stage6_lock_status_key">Stage 6?</string>
    <string name="shared_pref_stage7_lock_status_key">Stage 7?</string>
    <string name="shared_pref_stage8_lock_status_key">Stage 8?</string>
    <string name="shared_pref_gold">1010101</string>
    <string name="shared_pref_silver">101001</string>
    <string name="shared_pref_bronze">10101</string>
    <string name="shared_pref_no_medal">101</string>
    <string name="shared_pref_medal_default">101,000,0</string>
    <string name="stage_select_level_1">1</string>
    <string name="stage_select_level_2">2</string>
    <string name="stage_select_level_3">3</string>
    <string name="stage_select_level_4">4</string>
    <string name="multi_page_frag_com_layout_key">multiLevel</string>
    <string name="multi_page_frag_com_hasSwitch_key">does this ish have flip</string>
    <string name="multi_page_frag_com_hasSwipeHelp">are they retarded</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="home_screen_themeButton">THEMES</string>
    <string name="home_screen_playButton">PLAY</string>
    <string name="title_activity_win_screen">win_screen</string>
    <string name="level_header_default_time">0:00</string>
    <string name="level_header_default_levelNum">Stage # Level #</string>
    <string name="level_header_move_label">Move</string>
    <string name="level_header_default_moveCount">0</string>
    <string name="level_intro_default_bronze_time">1:00</string>
    <string name="level_intro_default_bronze_moves">30 Moves</string>
    <string name="level_intro_default_silver_time">0:45</string>
    <string name="level_intro_default_silver_moves">20 Moves</string>
    <string name="level_intro_default_gold_time">0:30</string>
    <string name="level_intro_default_gold_moves">15 Moves</string>
    <string name="level_intro_playButton">PLAY</string>
    <string name="victory_header_label">You Won!</string>
    <string name="victory_default_time">0:00</string>
    <string name="victory_default_moves">0 Moves</string>
    <string name="s1l1_bronze_time">0:35</string>
    <string name="s1l1_bronze_moves">30</string>
    <string name="s1l1_silver_time">0:25</string>
    <string name="s1l1_silver_moves">15</string>
    <string name="s1l1_gold_time">0:15</string>
    <string name="s1l1_gold_moves">10</string>
    <string name="s1l2_bronze_time">0:35</string>
    <string name="s1l2_bronze_moves">30</string>
    <string name="s1l2_silver_time">0:25</string>
    <string name="s1l2_silver_moves">20</string>
    <string name="s1l2_gold_time">0:15</string>
    <string name="s1l2_gold_moves">14</string>
    <string name="s1l3_bronze_time">0:45</string>
    <string name="s1l3_bronze_moves">35</string>
    <string name="s1l3_silver_time">0:30</string>
    <string name="s1l3_silver_moves">20</string>
    <string name="s1l3_gold_time">0:20</string>
    <string name="s1l3_gold_moves">17</string>
    <string name="s1l4_bronze_time">0:45</string>
    <string name="s1l4_bronze_moves">40</string>
    <string name="s1l4_silver_time">0:35</string>
    <string name="s1l4_silver_moves">27</string>
    <string name="s1l4_gold_time">0:25</string>
    <string name="s1l4_gold_moves">22</string>
    <string name="s2l1_bronze_time">0:30</string>
    <string name="s2l1_bronze_moves">25</string>
    <string name="s2l1_silver_time">0:20</string>
    <string name="s2l1_silver_moves">15</string>
    <string name="s2l1_gold_time">0:15</string>
    <string name="s2l1_gold_moves">12</string>
    <string name="s2l2_bronze_time">0:45</string>
    <string name="s2l2_bronze_moves">35</string>
    <string name="s2l2_silver_time">0:30</string>
    <string name="s2l2_silver_moves">25</string>
    <string name="s2l2_gold_time">0:25</string>
    <string name="s2l2_gold_moves">19</string>
    <string name="s2l3_bronze_time">0:50</string>
    <string name="s2l3_bronze_moves">35</string>
    <string name="s2l3_silver_time">0:40</string>
    <string name="s2l3_silver_moves">27</string>
    <string name="s2l3_gold_time">0:30</string>
    <string name="s2l3_gold_moves">23</string>
    <string name="s2l4_bronze_time">1:00</string>
    <string name="s2l4_bronze_moves">60</string>
    <string name="s2l4_silver_time">0:50</string>
    <string name="s2l4_silver_moves">50</string>
    <string name="s2l4_gold_time">0:45</string>
    <string name="s2l4_gold_moves">40</string>
    <string name="s3l1_bronze_time">0:30</string>
    <string name="s3l1_bronze_moves">30</string>
    <string name="s3l1_silver_time">0:20</string>
    <string name="s3l1_silver_moves">15</string>
    <string name="s3l1_gold_time">0:15</string>
    <string name="s3l1_gold_moves">10</string>
    <string name="s3l2_bronze_time">0:40</string>
    <string name="s3l2_bronze_moves">30</string>
    <string name="s3l2_silver_time">0:30</string>
    <string name="s3l2_silver_moves">25</string>
    <string name="s3l2_gold_time">0:20</string>
    <string name="s3l2_gold_moves">18</string>
    <string name="s3l3_bronze_time">1:00</string>
    <string name="s3l3_bronze_moves">32</string>
    <string name="s3l3_silver_time">0:35</string>
    <string name="s3l3_silver_moves">28</string>
    <string name="s3l3_gold_time">0:25</string>
    <string name="s3l3_gold_moves">24</string>
    <string name="s3l4_bronze_time">0:45</string>
    <string name="s3l4_bronze_moves">37</string>
    <string name="s3l4_silver_time">0:35</string>
    <string name="s3l4_silver_moves">32</string>
    <string name="s3l4_gold_time">0:30</string>
    <string name="s3l4_gold_moves">27</string>
    <string name="s4l1_bronze_time">0:40</string>
    <string name="s4l1_bronze_moves">30</string>
    <string name="s4l1_silver_time">0:30</string>
    <string name="s4l1_silver_moves">23</string>
    <string name="s4l1_gold_time">0:20</string>
    <string name="s4l1_gold_moves">18</string>
    <string name="s4l2_bronze_time">1:00</string>
    <string name="s4l2_bronze_moves">30</string>
    <string name="s4l2_silver_time">0:35</string>
    <string name="s4l2_silver_moves">25</string>
    <string name="s4l2_gold_time">0:25</string>
    <string name="s4l2_gold_moves">20</string>
    <string name="s4l3_bronze_time">1:00</string>
    <string name="s4l3_bronze_moves">50</string>
    <string name="s4l3_silver_time">0:45</string>
    <string name="s4l3_silver_moves">43</string>
    <string name="s4l3_gold_time">0:35</string>
    <string name="s4l3_gold_moves">38</string>
    <string name="s4l4_bronze_time">1:15</string>
    <string name="s4l4_bronze_moves">80</string>
    <string name="s4l4_silver_time">1:00</string>
    <string name="s4l4_silver_moves">65</string>
    <string name="s4l4_gold_time">0:50</string>
    <string name="s4l4_gold_moves">60</string>
    <string name="s5l1_bronze_time">1:00</string>
    <string name="s5l1_bronze_moves">65</string>
    <string name="s5l1_silver_time">0:50</string>
    <string name="s5l1_silver_moves">55</string>
    <string name="s5l1_gold_time">0:45</string>
    <string name="s5l1_gold_moves">45</string>
    <string name="s5l2_bronze_time">1:30</string>
    <string name="s5l2_bronze_moves">80</string>
    <string name="s5l2_silver_time">1:15</string>
    <string name="s5l2_silver_moves">65</string>
    <string name="s5l2_gold_time">1:05</string>
    <string name="s5l2_gold_moves">60</string>
    <string name="s5l3_bronze_time">1:40</string>
    <string name="s5l3_bronze_moves">85</string>
    <string name="s5l3_silver_time">1:20</string>
    <string name="s5l3_silver_moves">75</string>
    <string name="s5l3_gold_time">1:10</string>
    <string name="s5l3_gold_moves">65</string>
    <string name="s5l4_bronze_time">1:45</string>
    <string name="s5l4_bronze_moves">90</string>
    <string name="s5l4_silver_time">1:25</string>
    <string name="s5l4_silver_moves">77</string>
    <string name="s5l4_gold_time">1:15</string>
    <string name="s5l4_gold_moves">70</string>
    <string name="s6l1_bronze_time">0:50</string>
    <string name="s6l1_bronze_moves">37</string>
    <string name="s6l1_silver_time">0:40</string>
    <string name="s6l1_silver_moves">30</string>
    <string name="s6l1_gold_time">0:30</string>
    <string name="s6l1_gold_moves">25</string>
    <string name="s6l2_bronze_time">1:05</string>
    <string name="s6l2_bronze_moves">60</string>
    <string name="s6l2_silver_time">0:55</string>
    <string name="s6l2_silver_moves">45</string>
    <string name="s6l2_gold_time">0:45</string>
    <string name="s6l2_gold_moves">35</string>
    <string name="s6l3_bronze_time">1:15</string>
    <string name="s6l3_bronze_moves">65</string>
    <string name="s6l3_silver_time">1:00</string>
    <string name="s6l3_silver_moves">55</string>
    <string name="s6l3_gold_time">0:50</string>
    <string name="s6l3_gold_moves">45</string>
    <string name="s6l4_bronze_time">2:00</string>
    <string name="s6l4_bronze_moves">90</string>
    <string name="s6l4_silver_time">1:45</string>
    <string name="s6l4_silver_moves">80</string>
    <string name="s6l4_gold_time">1:30</string>
    <string name="s6l4_gold_moves">70</string>
    <string name="s7l1_bronze_time">1:00</string>
    <string name="s7l1_bronze_moves">30</string>
    <string name="s7l1_silver_time">0:35</string>
    <string name="s7l1_silver_moves">25</string>
    <string name="s7l1_gold_time">0:25</string>
    <string name="s7l1_gold_moves">20</string>
    <string name="s7l2_bronze_time">1:00</string>
    <string name="s7l2_bronze_moves">30</string>
    <string name="s7l2_silver_time">0:35</string>
    <string name="s7l2_silver_moves">25</string>
</resources>