<?xml version="1.0" encoding="utf-8"?>
    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="com.example.zach.memorygame.homePage"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/person"
        android:layout_width="143dp"
        android:layout_height="361dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.038"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.939"
        tools:src="@drawable/person" />

    <ImageView
        android:id="@+id/bubblesmall"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="@+id/person"
        app:layout_constraintEnd_toEndOf="@+id/person"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/person"
        app:layout_constraintTop_toTopOf="@+id/person"
        app:layout_constraintVertical_bias="0.0"
        tools:src="@drawable/firstdot" />

    <ImageView
        android:id="@+id/bubblemed"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="@+id/person"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/bubblesmall"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.22"
        tools:src="@drawable/seconddot" />

    <ImageView
        android:id="@+id/bubblelarge"
        android:layout_width="170dp"
        android:layout_height="193dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="@+id/person"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0"
        tools:src="@drawable/thirddot" />

    <ImageView
        android:id="@+id/tile_in_bubble"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="@+id/bubblelarge"
        app:layout_constraintEnd_toEndOf="@+id/bubblelarge"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintStart_toStartOf="@+id/bubblelarge"
        app:layout_constraintTop_toTopOf="@+id/bubblelarge"
        app:layout_constraintVertical_bias="0.412" />

    <Button
        android:id="@+id/themeButton"
        android:layout_width="186dp"
        android:layout_height="85dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/cartoon_button"
        android:fontFamily="@font/finger_paint"
        android:text="@string/home_screen_themeButton"
        android:textAlignment="center"
        android:textColor="#212121"
        android:textSize="46sp"
        app:layout_constraintBottom_toBottomOf="@+id/person"
        app:layout_constraintEnd_toEndOf="@+id/playButton"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/playButton"
        app:layout_constraintTop_toBottomOf="@+id/playButton"
        tools:text="THEMES" />

    <Button
        android:id="@+id/playButton"
        android:layout_width="186dp"
        android:layout_height="85dp"
        android:background="@drawable/cartoon_button"
        android:fontFamily="@font/finger_paint"
        android:text="@string/home_screen_playButton"
        android:textAlignment="center"
        android:textColor="#212121"
        android:textSize="52sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.956"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.703" />
    </android.support.constraint.ConstraintLayout>
